📝 Actualizada la configuración de swagger